--- a/ap/Final7_NaiveBayes.ipynb
+++ b/ap/Final7_NaiveBayes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "7844ce47",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "64894341",
    "metadata": {},
    "outputs": [
@@ -54,7 +54,7 @@
        "      <td>3.5</td>\n",
        "      <td>1.4</td>\n",
        "      <td>0.2</td>\n",
-       "      <td>setosa</td>\n",
+       "      <td>Iris-setosa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -62,7 +62,7 @@
        "      <td>3.0</td>\n",
        "      <td>1.4</td>\n",
        "      <td>0.2</td>\n",
-       "      <td>setosa</td>\n",
+       "      <td>Iris-setosa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -70,7 +70,7 @@
        "      <td>3.2</td>\n",
        "      <td>1.3</td>\n",
        "      <td>0.2</td>\n",
-       "      <td>setosa</td>\n",
+       "      <td>Iris-setosa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -78,7 +78,7 @@
        "      <td>3.1</td>\n",
        "      <td>1.5</td>\n",
        "      <td>0.2</td>\n",
-       "      <td>setosa</td>\n",
+       "      <td>Iris-setosa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -86,7 +86,7 @@
        "      <td>3.6</td>\n",
        "      <td>1.4</td>\n",
        "      <td>0.2</td>\n",
-       "      <td>setosa</td>\n",
+       "      <td>Iris-setosa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -102,7 +102,7 @@
        "      <td>3.0</td>\n",
        "      <td>5.2</td>\n",
        "      <td>2.3</td>\n",
-       "      <td>virginica</td>\n",
+       "      <td>Iris-virginica</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>146</th>\n",
@@ -110,7 +110,7 @@
        "      <td>2.5</td>\n",
        "      <td>5.0</td>\n",
        "      <td>1.9</td>\n",
-       "      <td>virginica</td>\n",
+       "      <td>Iris-virginica</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>147</th>\n",
@@ -118,7 +118,7 @@
        "      <td>3.0</td>\n",
        "      <td>5.2</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>virginica</td>\n",
+       "      <td>Iris-virginica</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>148</th>\n",
@@ -126,7 +126,7 @@
        "      <td>3.4</td>\n",
        "      <td>5.4</td>\n",
        "      <td>2.3</td>\n",
-       "      <td>virginica</td>\n",
+       "      <td>Iris-virginica</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>149</th>\n",
@@ -134,7 +134,7 @@
        "      <td>3.0</td>\n",
        "      <td>5.1</td>\n",
        "      <td>1.8</td>\n",
-       "      <td>virginica</td>\n",
+       "      <td>Iris-virginica</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -142,23 +142,23 @@
        "</div>"
       ],
       "text/plain": [
-       "     sepal_length  sepal_width  petal_length  petal_width    species\n",
-       "0             5.1          3.5           1.4          0.2     setosa\n",
-       "1             4.9          3.0           1.4          0.2     setosa\n",
-       "2             4.7          3.2           1.3          0.2     setosa\n",
-       "3             4.6          3.1           1.5          0.2     setosa\n",
-       "4             5.0          3.6           1.4          0.2     setosa\n",
-       "..            ...          ...           ...          ...        ...\n",
-       "145           6.7          3.0           5.2          2.3  virginica\n",
-       "146           6.3          2.5           5.0          1.9  virginica\n",
-       "147           6.5          3.0           5.2          2.0  virginica\n",
-       "148           6.2          3.4           5.4          2.3  virginica\n",
-       "149           5.9          3.0           5.1          1.8  virginica\n",
+       "     sepal_length  sepal_width  petal_length  petal_width         species\n",
+       "0             5.1          3.5           1.4          0.2     Iris-setosa\n",
+       "1             4.9          3.0           1.4          0.2     Iris-setosa\n",
+       "2             4.7          3.2           1.3          0.2     Iris-setosa\n",
+       "3             4.6          3.1           1.5          0.2     Iris-setosa\n",
+       "4             5.0          3.6           1.4          0.2     Iris-setosa\n",
+       "..            ...          ...           ...          ...             ...\n",
+       "145           6.7          3.0           5.2          2.3  Iris-virginica\n",
+       "146           6.3          2.5           5.0          1.9  Iris-virginica\n",
+       "147           6.5          3.0           5.2          2.0  Iris-virginica\n",
+       "148           6.2          3.4           5.4          2.3  Iris-virginica\n",
+       "149           5.9          3.0           5.1          1.8  Iris-virginica\n",
        "\n",
        "[150 rows x 5 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "2a55ffd4",
    "metadata": {},
    "outputs": [
@@ -194,7 +194,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "7fb6b5af",
    "metadata": {},
    "outputs": [
@@ -348,7 +348,7 @@
        "[150 rows x 5 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "12aa97e1",
    "metadata": {},
    "outputs": [],
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "4d6c052c",
    "metadata": {},
    "outputs": [],
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "04130048",
    "metadata": {},
    "outputs": [
@@ -397,7 +397,7 @@
        "GaussianNB()"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,26 +410,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "afc5a2df",
+   "execution_count": 8,
+   "id": "cfefca34",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2 0 2 0 0 2 2 2 2 0 1 2 0 2 2 2 0 0 1 2 1 1 1 1 2 0 0 2 0 2]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "ypred=gaussian.predict(xtest)\n",
-    "print(ypred)"
+    "ypred = gaussian.predict(xtest) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
+   "id": "afc5a2df",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Real Values</th>\n",
+       "      <th>Predicted Values</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>56</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>90</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Real Values  Predicted Values\n",
+       "7             0                 0\n",
+       "56            1                 1\n",
+       "90            1                 1\n",
+       "29            0                 0\n",
+       "47            0                 0"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame({'Real Values':ytest, 'Predicted Values':ypred})\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "245d6d79",
    "metadata": {},
    "outputs": [
@@ -442,8 +513,8 @@
       "Precision = 0.9333333333333333\n",
       "Recall = 0.9333333333333333\n",
       "[[10  0  0]\n",
-      " [ 0  6  2]\n",
-      " [ 0  0 12]]\n"
+      " [ 0  9  1]\n",
+      " [ 0  1  9]]\n"
      ]
     }
    ],
@@ -458,9 +529,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5c34eace",
+   "metadata": {},
+   "source": [
+    "Accuracy gives an overall assessment of how well the model performs across all classes.\n",
+    "\n",
+    "Precision, on the other hand, focuses on the quality of positive predictions made by the model. \n",
+    "The recall is the ratio tp / (tp + fn) where tp is the number of true positives and fn the number of false negatives. The recall is intuitively the ability of the classifier to find all the positive samples.\n",
+    "\n",
+    "The first row represents the true labels for the first class. In this case, there are 10 instances that belong to class 0, and the classifier correctly predicted all of them as class 0 (true negatives).\n",
+    "\n",
+    "The second row represents the true labels for the second class. There are 9 instances that belong to class 1, and the classifier predicted all of them correctly as class 1 (true positives). However, there is one instance that actually belongs to class 1 but was misclassified as class 2 (false negative).\n",
+    "\n",
+    "The third row represents the true labels for the third class. There are 9 instances that belong to class 2, and the classifier predicted all of them correctly as class 2 (true positives). However, there is one instance that actually belongs to class 2 but was misclassified as class 1 (false negative).\n",
+    "\n",
+    "In summary, the confusion matrix indicates that the classifier achieved perfect accuracy for class 0 (10 true negatives), but there was a misclassification in the second and third classes, resulting in one false negative each."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37661b25",
+   "id": "71590c6d",
    "metadata": {},
    "outputs": [],
    "source": []
